# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko3/: monopoli.md  (+3 more)
planesweeper/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
planesweeper/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
planesweeper/src/: .planesweeper.db  game.py  loop.py  pygame_events.py  pygame_renderer.py  pygame_ui_events.py
planesweeper/src/entities/: board.py  board_grid_item.py  board_piece.py  status_item.py  world_background.py
planesweeper/src/entities/ui/: board_grid_item.py  board_grid_line.py  button.py  status_item.py  text_box.py  text_overlay.py  world_background.py
planesweeper/src/pg/: pygame_events.py  pygame_renderer.py
planesweeper/src/primitives/: asset.py  border.py  color.py  event_data.py  event_type.py  events.py  game.py  game_initialization.py  game_mode.py  game_state.py  highscores.py  interfaces.py  position.py  size.py  state_transition.py  text_object.py
planesweeper/src/repositories/: configuration_repository.py  highscore_repository.py
planesweeper/src/services/: AssetService.py  asset_service.py  database_service.py  events_handling_service.py  language_service.py  ui_service.py
planesweeper/src/services/languages/: english.py  finnish.py
planesweeper/src/tests/: board_test.py  configuration_test.py  events_test.py  gameloop_test.py  highscores_test.py  language_test.py
(+4 files in other folders)
